[MAZE-57] - added CourseMember and moved group from User to CourseMember (does not work)(hibernate issue)